Markdown to HTML.

--- a/README.html
+++ b/README.html
@@ -1,22 +1,65 @@
-<h1>My title</h1>
-<ul>
-<li>He<b>l</b>lo</li>
-<li>Bye</li>
-</ul>
+<h1>$$\mathbb{\color{teal}\Huge\ {README.md} \ \color{Green}{FILE}}$$</h1>
+<h1>${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$</h1>
+<h1>$$\mathbb{\color{green}\Huge\ {ALX} \ \color{teal}{Front \ End}\}$$</h1>
+<h1>$$\mathbb{\color{green}\Huge\ {Short \ Specializations}\}$$</h1>
+<h1>$$\mathbb{\color{teal}\Huge\ {Repository}\}$$</h1>
+<h1>${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂱\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂡\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$ ${{\color{black}\Huge\{\textsf{ 🂮\}}}}$ ${{\color{red}\Huge\{\textsf{ 🂾\}}}}$</h1>
+<h3>[<b>ALX Short Specializations alx-frontend-for-fun</b>](https://intranet.alxswe.com/projects/1207) *is the part of Alx SE Foundations final stage to be given for 3 Months and this repo is optional or advanced tasks*</h3>
+<ol>
+<li><b>*Authored by:</b>* ***Bereket Dereje Mekonnen***</li>
+</ol>
+<h2></h2>
 <p>
-Hello
+<H1> 🗄🗂🧧📁🗃📂💽📦📀🧰💾📚💿💼🗳🗄<br><ins>The Directories Under alx-frontend-for-fun Repository</ins> <br>🗄🗂🧧📁🗃📂💽📦📀🧰💾📚💿💼🗳🗄</H2>
 </p>
 <p>
-I'm <b>a</b> text
+| <H3 align="center">NO.</H3> | <H3 align="center">Project Title</H3> | <H3 align="center">Directory</H3> | <H3 align="center">Files</H3> |
 <br/>
-with <em>2 lines</em>
-</p>
-<p>
-I will live in araas
-</p>
-<p>
-But it's 2c17c6393771ee3048ae34d6b380c5ec
-</p>
-<p>
-So cool!
+| :----: | :----:| :---- | :---- |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |   |
+<br/>
+|   | <H3 align="center">ALX Short Specializations<br> alx-frontend-for-fun repo<br> Markdown to HTML</H3> |  |  |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |  |
+<br/>
+| <b>-</b> | [**Markdown to HTML**](https://intranet.alxswe.com/projects/1207) | [**alx-frontend-for-fun**](https://github.com/BekiHabesha/alx-frontend-for-fun) | 🟢 [**markdown2html.py**](https://github.com/BekiHabesha/alx-frontend-for-fun/tree/master/markdown2html.py)<br> 🟡 <br> 🔴  |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |   |
+<br/>
+| <b>1</b> |   |   | 🟢 <br> 🟡 <br> 🔴  |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |   |
+<br/>
+| <b>2</b> |   |   | 🟢 <br> 🟡 <br> 🔴  |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |   |
+<br/>
+| <b>3</b> |   |   | 🟢 <br> 🟡 <br> 🔴  |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |   |
+<br/>
+| <b>4</b> |   |   | 🟢 <br> 🟡 <br> 🔴  |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |   |
+<br/>
+| <b>5</b> |   |   | 🟢 <br> 🟡 <br> 🔴  |
+<br/>
+|   |   |   |   |
+<br/>
+|   |   |   |   |
 </p>
